# matd02

./: README.md
.github/workflows/: backend-lints.yml
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a74620eaccfb_start_mocking.py  ff67ab4d895c_start.py
backend/app/: __main__.py
backend/app/core/: config.py  events.py
backend/app/core/settings/: app.py
backend/app/models/: __init__.py  activities.py  activity_registers.py  baselines.py  categories.py  comprobatory_documents.py  courses.py  subcategories.py  users.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: helpers.tsx  utils.tsx
frontend/src/app/: page.tsx  types.ts
frontend/src/app/login/: page.tsx
frontend/src/app/shared/: form.tsx  list.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/app/simulation-b/: page.tsx
frontend/src/app/simulation-c/: page.tsx
frontend/src/app/simulation-d/: page.tsx
frontend/src/app/simulation-e/: page.tsx
frontend/src/app/simulation-f/: page.tsx
frontend/src/app/simulation-g/: page.tsx
frontend/src/app/simulation-h/: page.tsx
frontend/src/app/simulation-i/: page.tsx
frontend/src/app/simulation-j/: page.tsx
frontend/src/app/simulation-k/: page.tsx
frontend/src/app/simulation-l/: page.tsx
frontend/src/app/simulation-m/: page.tsx
frontend/src/app/simulation-n/: EDFBar.tsx  form.tsx  list.tsx  page.tsx
frontend/src/app/simulation-o/: page.tsx
frontend/src/app/simulation-p/: page.tsx
frontend/src/app/simulation-q/: page.tsx
frontend/src/app/simulation-r/: page.tsx
frontend/src/app/simulation-s/: RMSBar.tsx  page.tsx
frontend/src/components/: app-bar.tsx  login-form.tsx
frontend/src/types/: request.ts
(+8 files in other folders)
